
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"
sha2 = "0.10.2"
hex-literal = "0.3.4"
generic-array = "0.14.5"
agsol-borsh-schema = "0.0.2"
#reqwest = { version = "0.11", features = ["json"] }
#tokio = { version = "1", features = ["full"] }
#serde = "1.0.137"
#serde_json = "1.0.81"

[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
